# readme-update

./: README.md  pyproject.toml
docs/: README_zh-CN.md
readme_update/: parse.py
